--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-MONGODB_USERNAME=root
-MONGODB_PASSWORD=example
+MONGO_DATABASE=txloggingdb
+MONGO_COLLECTION=log
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=example
+MONGO_NON_ROOT_USERNAME=txlogging
+MONGO_NON_ROOT_PASSWORD=log
 FLUENTD_CONFIG_DIR=./fluentd/etc
 MONGODB_DATA_DIR=./mongodb/data
 TXQUEUE_PORT=8080
+FLUENTD_APP=txlogging
