--- a/api/openAPI3/openapi/my_api.yaml
+++ b/api/openAPI3/openapi/my_api.yaml
@@ -19,7 +19,7 @@ paths:
           description: successful operation
       requestBody:
         content:
-          applicaton/json:
+          application/json:
             schema:
               $ref: '#/components/schemas/Log'
     get:
@@ -31,14 +31,14 @@ paths:
       parameters:
         - name: start
           in: query
-          description: start, nanosecond precision in utc
+          description: start
           schema:
-            type: number
+            type: string
         - name: end
           in: query
-          description: end, nanosecond precision in utc
+          description: end
           schema:
-            type: number
+            type: string
       responses:
         '200':
           description: successful operation
