--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,44 @@
 version: '3'
 services:
   mongodb:
-    image: mongo:3.4.22-xenial
+    build:
+      context: mongodb
     restart: always
-    volumes:
-      - $MONGODB_DATA_DIR:/data/db
+    # volumes:
+    #   - $MONGODB_DATA_DIR:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: $MONGODB_USERNAME
-      MONGO_INITDB_ROOT_PASSWORD: $MONGODB_PASSWORD
+      MONGO_INITDB_ROOT_USERNAME: $MONGO_INITDB_ROOT_USERNAME
+      MONGO_INITDB_ROOT_PASSWORD: $MONGO_INITDB_ROOT_PASSWORD
+      MONGO_INITDB_DATABASE: $MONGO_DATABASE
+      MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
+      MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
     expose:
       - 27017
       - 27018
       - 27019
 
-  mongo-express:
-    image: mongo-express:0.49.0
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGODB_USERNAME
-      ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGODB_PASSWORD
+  # mongo-express:
+  #   image: mongo-express:0.49.0
+  #   restart: always
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGODB_USERNAME
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGODB_PASSWORD
 
   fluentd:
-    image: fluentd:v1.6.2-1.0
+    build:
+      context: fluentd
     restart: always
     volumes:
       - $FLUENTD_CONFIG_DIR:/fluentd/etc
     command: -v
     environment:
-      MONGODB_USERNAME: $MONGODB_USERNAME
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
+      FLUENTD_APP: $FLUENTD_APP
+      MONGO_DATABASE: $MONGO_DATABASE
+      MONGO_COLLECTION: $MONGO_COLLECTION
+      MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
+      MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
     depends_on:
       - mongodb
     expose:
@@ -45,13 +53,13 @@ services:
     environment:
       FLUENTD_HOST: fluentd
       FLUENTD_PORT: 24224
-      FLUENTD_APP: txlogging
-      MONGODB_HOST: mongodb
-      MONGODB_PORT: 27017
-      MONGODB_DATABASE: txlogging
-      MONGODB_COLLECTION: log
-      MONGODB_USERNAME: $MONGODB_USERNAME
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
+      FLUENTD_APP: $FLUENTD_APP
+      MONGO_HOST: mongodb
+      MONGO_PORT: 27017
+      MONGO_DATABASE: $MONGO_DATABASE
+      MONGO_COLLECTION: $MONGO_COLLECTION
+      MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
+      MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
     ports:
       - $TXQUEUE_PORT:8080
 
