--- a/fluentd/etc/fluent.conf
+++ b/fluentd/etc/fluent.conf
@@ -3,24 +3,24 @@
   port 24224
 </source>
 
-<match *>
+<match "#{ENV['FLUENTD_APP']}.**">
   @type mongo
   host mongodb
   port 27017
-  database txlogging
-  collection log
+  database "#{ENV['MONGO_DATABASE']}"
+  collection "#{ENV['MONGO_COLLECTION']}"
 
   # authentication
-  user #{ENV['MONGODB_USERNAME']}
-  password #{ENV['MONGODB_PASSWORD']}
+  user "#{ENV['MONGO_NON_ROOT_USERNAME']}"
+  password "#{ENV['MONGO_NON_ROOT_PASSWORD']}"
 
   <inject>
     # key name of timestamp
-    time_key time
+    time_key fluentd_time
   </inject>
 
   <buffer>
     # flush
-    flush_interval 10s
+    flush_interval 0s
   </buffer>
 </match>
