--- a/api/openAPI3/openapi/my_api.yaml
+++ b/api/openAPI3/openapi/my_api.yaml
@@ -47,22 +47,29 @@ paths:
               schema: {}
         '400':
           description: Invalid value
+    delete:
+      tags:
+        - logging
+      summary: get log entries
+      description: get log entries
+      operationId: api.deleteLog
+      responses:
+        '200':
+          description: successful operation
 components:
   schemas:
     Log:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
+        _id:
+          not: {}
         timestamp:
           type: string
           format: timestamp
-        message:
-          type: string
         event:
           type: string
         source:
           type: string
         level:
           type: string
+      required: ["timestamp", "event", "source", "level"]
