--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ MONGO_INITDB_ROOT_PASSWORD=example
 MONGO_NON_ROOT_USERNAME=txlogging
 MONGO_NON_ROOT_PASSWORD=log
 FLUENTD_CONFIG_DIR=./fluentd/etc
-MONGODB_DATA_DIR=./mongodb/data
-TXQUEUE_PORT=8080
+MONGODB_DATA_VOLUME=mongo-data
+API_PORT=8080
 FLUENTD_APP=txlogging
