--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: mongodb
     restart: always
     volumes:
-      - $MONGODB_DATA_DIR:/data/db
+      - $MONGODB_DATA_VOLUME:/data/db
     environment:
       MONGO_INITDB_ROOT_USERNAME: $MONGO_INITDB_ROOT_USERNAME
       MONGO_INITDB_ROOT_PASSWORD: $MONGO_INITDB_ROOT_PASSWORD
@@ -61,9 +61,6 @@ services:
       MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
       MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
     ports:
-      - $TXQUEUE_PORT:8080
+      - $API_PORT:8080
 
     
-    
-volumes:
-  logvolume01: {}
