--- a/fluentd/etc/fluent.conf
+++ b/fluentd/etc/fluent.conf
@@ -5,7 +5,7 @@
 
 <match "#{ENV['FLUENTD_APP']}.**">
   @type mongo
-  host mongodb
+  host "#{ENV['MONGO_HOST']}"
   port 27017
   database "#{ENV['MONGO_DATABASE']}"
   collection "#{ENV['MONGO_COLLECTION']}"
