--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  mongodb:
+  txlogging-mongodb:
     build:
       context: mongodb
     restart: always
@@ -26,7 +26,7 @@ services:
   #     ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGODB_USERNAME
   #     ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGODB_PASSWORD
 
-  fluentd:
+  txlogging-fluentd:
     build:
       context: fluentd
     restart: always
@@ -35,12 +35,13 @@ services:
     command: -v
     environment:
       FLUENTD_APP: $FLUENTD_APP
+      MONGO_HOST: txlogging-mongodb
       MONGO_DATABASE: $MONGO_DATABASE
       MONGO_COLLECTION: $MONGO_COLLECTION
       MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
       MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
     depends_on:
-      - mongodb
+      - txlogging-mongodb
     expose:
       - 24224
     
@@ -48,13 +49,13 @@ services:
     build: .
     restart: always
     depends_on:
-      - fluentd
-      - mongodb
+      - txlogging-fluentd
+      - txlogging-mongodb
     environment:
-      FLUENTD_HOST: fluentd
+      FLUENTD_HOST: txlogging-fluentd
       FLUENTD_PORT: 24224
       FLUENTD_APP: $FLUENTD_APP
-      MONGO_HOST: mongodb
+      MONGO_HOST: txlogging-mongodb
       MONGO_PORT: 27017
       MONGO_DATABASE: $MONGO_DATABASE
       MONGO_COLLECTION: $MONGO_COLLECTION
