--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   txlogging-mongodb:
-    build:
-      context: mongodb
+    image: zooh/tx-persistence:0.1.0
     restart: always
     volumes:
       - $MONGODB_DATA_VOLUME:/data/db
@@ -12,10 +11,6 @@ services:
       MONGO_INITDB_DATABASE: $MONGO_DATABASE
       MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
       MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
-    expose:
-      - 27017
-      - 27018
-      - 27019
 
   # mongo-express:
   #   image: mongo-express:0.49.0
@@ -32,7 +27,6 @@ services:
     restart: always
     volumes:
       - $FLUENTD_CONFIG_DIR:/fluentd/etc
-    command: -v
     environment:
       FLUENTD_APP: $FLUENTD_APP
       MONGO_HOST: txlogging-mongodb
@@ -42,8 +36,6 @@ services:
       MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
     depends_on:
       - txlogging-mongodb
-    expose:
-      - 24224
     
   txlogging:
     build: .
