added autotesting on dockerhub

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3-alpine
 RUN pip install requests pytest ndjson
 RUN mkdir test
 
-COPY test/test_logging.py /test/test_logging.py
+COPY test_logging.py /test/test_logging.py
 
 WORKDIR test
 
