--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,7 +2,8 @@ version: '3'
 services:
   sut:
     build:
-      context: test
+      context: .
+      dockerfile: test/Dockerfile
     command: ["-s", "-x"]
     depends_on:
       - txlogging
