--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,26 @@
 version: '3'
 services:
   txlogging-mongodb:
-    image: zooh/tx-persistence:0.1.0
+    image: txscience/tx-persistence:latest
     restart: always
     volumes:
-      - $MONGODB_DATA_VOLUME:/data/db
+      - ${MONGODB_DATA_VOLUME}:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: $MONGO_INITDB_ROOT_USERNAME
-      MONGO_INITDB_ROOT_PASSWORD: $MONGO_INITDB_ROOT_PASSWORD
-      MONGO_INITDB_DATABASE: $MONGO_DATABASE
-      MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
-      MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
-
-  # mongo-express:
-  #   image: mongo-express:0.49.0
-  #   restart: always
-  #   ports:
-  #     - 8081:8081
-  #   environment:
-  #     ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGODB_USERNAME
-  #     ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGODB_PASSWORD
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
+      MONGO_NON_ROOT_USERNAME: ${MONGO_NON_ROOT_USERNAME}
+      MONGO_NON_ROOT_PASSWORD: ${MONGO_NON_ROOT_PASSWORD}
 
   txlogging-fluentd:
-    build:
-      context: fluentd
-    restart: always
-    volumes:
-      - $FLUENTD_CONFIG_DIR:/fluentd/etc
+    image: txscience/tx-fluetd:latest
     environment:
-      FLUENTD_APP: $FLUENTD_APP
-      MONGO_HOST: txlogging-mongodb
-      MONGO_DATABASE: $MONGO_DATABASE
-      MONGO_COLLECTION: $MONGO_COLLECTION
-      MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
-      MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
+      FLUENTD_APP: ${FLUENTD_APP}
+      MONGO_HOST: ${MONTO_HOST}
+      MONGO_DATABASE: ${MONGO_DATABASE}
+      MONGO_COLLECTION: ${MONGO_COLLECTION}
+      MONGO_NON_ROOT_USERNAME: ${MONGO_NON_ROOT_USERNAME}
+      MONGO_NON_ROOT_PASSWORD: ${MONGO_NON_ROOT_PASSWORD}
     depends_on:
       - txlogging-mongodb
     
@@ -46,14 +33,13 @@ services:
     environment:
       FLUENTD_HOST: txlogging-fluentd
       FLUENTD_PORT: 24224
-      FLUENTD_APP: $FLUENTD_APP
+      FLUENTD_APP: ${FLUENTD_APP}
       MONGO_HOST: txlogging-mongodb
       MONGO_PORT: 27017
-      MONGO_DATABASE: $MONGO_DATABASE
-      MONGO_COLLECTION: $MONGO_COLLECTION
-      MONGO_NON_ROOT_USERNAME: $MONGO_NON_ROOT_USERNAME
-      MONGO_NON_ROOT_PASSWORD: $MONGO_NON_ROOT_PASSWORD
+      MONGO_DATABASE: ${MONGO_DATABASE}
+      MONGO_COLLECTION: ${MONGO_COLLECTION}
+      MONGO_NON_ROOT_USERNAME: ${MONGO_NON_ROOT_USERNAME}
+      MONGO_NON_ROOT_PASSWORD: ${MONGO_NON_ROOT_PASSWORD}
     ports:
-      - $API_PORT:8080
+      - ${API_PORT}:8080
 
-    
