--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,13 @@ services:
       MONGO_NON_ROOT_PASSWORD: ${MONGO_NON_ROOT_PASSWORD}
 
   txlogging-fluentd:
-    image: txscience/tx-fluetd:latest
+    image: txscience/tx-fluentd:latest
+    restart: always
+    volumes:
+      - ${FLUENTD_CONFIG_DIR}:/fluentd/etc
     environment:
       FLUENTD_APP: ${FLUENTD_APP}
-      MONGO_HOST: ${MONTO_HOST}
+      MONGO_HOST: ${MONGO_HOST}
       MONGO_DATABASE: ${MONGO_DATABASE}
       MONGO_COLLECTION: ${MONGO_COLLECTION}
       MONGO_NON_ROOT_USERNAME: ${MONGO_NON_ROOT_USERNAME}
@@ -31,15 +34,14 @@ services:
       - txlogging-fluentd
       - txlogging-mongodb
     environment:
-      FLUENTD_HOST: txlogging-fluentd
-      FLUENTD_PORT: 24224
+      FLUENTD_HOST: ${FLUENTD_HOST}
+      FLUENTD_PORT: ${FLUENTD_PORT}
       FLUENTD_APP: ${FLUENTD_APP}
-      MONGO_HOST: txlogging-mongodb
-      MONGO_PORT: 27017
+      MONGO_HOST: ${MONGO_HOST}
+      MONGO_PORT: ${MONGO_PORT}
       MONGO_DATABASE: ${MONGO_DATABASE}
       MONGO_COLLECTION: ${MONGO_COLLECTION}
       MONGO_NON_ROOT_USERNAME: ${MONGO_NON_ROOT_USERNAME}
       MONGO_NON_ROOT_PASSWORD: ${MONGO_NON_ROOT_PASSWORD}
     ports:
-      - ${API_PORT}:8080
-
+      - $API_PORT:8080
