--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "tx-utils"]
 	path = tx-utils
 	url = https://github.com/RENCI/tx-utils
+[submodule "tx-persistence"]
+	path = tx-persistence
+	url = https://github.com/RENCI/tx-persistence
+[submodule "tx-fluentd"]
+	path = tx-fluentd
+	url = https://github.com/RENCI/tx-fluentd
